--- a/src/components/Header/SideDrawer/index.scss
+++ b/src/components/Header/SideDrawer/index.scss
@@ -11,7 +11,7 @@
   max-width: 300px;
   z-index: 200;
   transform: translateX(-100%);
-  transition: transform 1s ease-out;
+  transition: transform 0.3s ease-out;
 
   a {
     color: $primary-black-1;
@@ -38,10 +38,10 @@
 }
 
 .side-drawer.open {
-  transform: translateX(0%);
+  transform: translateX(0);
 }
 
-@media (min-width: 769px) {
+@media (min-width: 959px) {
   .side-drawer {
     display: none;
   }
