Edit global styles

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,10 +4,13 @@
 $primary-black-1: #343434;
 
 // white
-$primary-white-1: #FFFFFF;
+$primary-white-1: #ffffff;
 
 // brown
-$primary-brown-1: #B97A58;
+$primary-brown-1: #b97a58;
+
+// blue
+$primary-blue-1: #3f51b5;
 
 // ========= Fonts ===========
 $font-thin: 200;
@@ -27,5 +30,3 @@ $font-size-6: 35px;
 $font-size-7: 40px;
 $font-size-8: 45px;
 $font-size-9: 50px;
-
-
