--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,11 +6,15 @@ html {
 }
 
 body {
-  height: 100%;
+  margin: 0;
+  height: calc(100% - 6.5rem);
 }
 
 // import font
 @import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800,900&display=swap");
+
+// import font icons
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 h1 {
   font-weight: $font-semibold;
@@ -24,6 +28,12 @@ h3 {
 }
 
 p {
+  font-weight: $font-light;
+  font-size: $font-size-2;
+  font-family: "Montserrat";
+}
+
+label {
   font-weight: $font-light;
   font-size: $font-size-2;
   font-family: "Montserrat";
