--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -16,20 +16,14 @@
     width: 10rem;
     padding-right: 5rem;
 
-    .icon-about {
-      font-size: 2rem;
+    .icon {
+      font-size: 1.5rem;
     }
 
-    .icon-about:hover {
-      color: $primary-brown-1;
-    }
-
-    .icon-contact {
-      font-size: 2rem;
-    }
-
-    .icon-contact:hover {
-      color: $primary-blue-1;
+    .icon:hover {
+      -webkit-transform: scale(1.3);
+      -ms-transform: scale(1.3);
+      transform: scale(1.3);
     }
   }
 }
