Add primary orange color

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,6 +12,9 @@ $primary-brown-1: #b97a58;
 // blue
 $primary-blue-1: #3f51b5;
 
+// orange
+$primary-orange-1: #EF7C00;
+
 // ========= Fonts ===========
 $font-thin: 200;
 $font-light: 300;
