--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,7 +13,19 @@ $primary-brown-1: #b97a58;
 $primary-blue-1: #3f51b5;
 
 // orange
-$primary-orange-1: #EF7C00;
+$primary-orange-1: #ef7c00;
+
+// pink
+$primary-pink-1: #f0c5d5;
+
+// grey
+$primary-grey-1: #e5e5e5;
+
+// green
+$primary-green-1: #24ce85;
+
+// purple
+$primary-purple-1: #a160fb;
 
 // ========= Fonts ===========
 $font-thin: 200;
