--- a/src/styles/pages/projects.scss
+++ b/src/styles/pages/projects.scss
@@ -6,4 +6,35 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
+  overflow-x: hidden;
+
+  h3 {
+    color: $primary-pink-1;
+  }
+
+  main {
+    margin-top: 6rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+
+    a:link {
+      text-decoration: none;
+    }
+
+    .info-container {
+      width: 50rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      animation: fadein 2s;
+    }
+
+    .image-container {
+      width: 300px;
+      height: 150px;
+    }
+  }
 }
