--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -50,13 +50,20 @@
   }
 
   .about-container {
-    width: 35rem;
-    padding: 1rem 0 1rem 0;
+    max-width: 30rem;
+    padding: 1rem 0 1.5rem 0;
 
     .university-text {
       display: inline;
       color: $primary-brown-1;
       font-weight: $font-semibold;
+    }
+
+    .header-text {
+      color: $primary-brown-1;
+      font-weight: $font-semibold;
+      font-size: $font-size-4;
+      font-family: "Montserrat";
     }
   }
 }
