Improve project image width

--- a/src/components/Carousel/index.scss
+++ b/src/components/Carousel/index.scss
@@ -1,7 +1,7 @@
 @import "styles/variables.scss";
 
 .carousel-container {
-  width: 20rem;
+  width: 18rem;
   height: 100%;
 
   .swapit-poster {
@@ -10,12 +10,12 @@
   }
 
   .image {
-    width: 16rem;
+    // width: 16rem;
     height: 34rem;
   }
 
   .image-cover {
-    width: 22rem;
+    // width: 22rem;
     height: 34rem;
   }
 
