--- a/src/styles/pages/contact.scss
+++ b/src/styles/pages/contact.scss
@@ -39,7 +39,7 @@
       outline: none;
       width: 100%;
       font-size: medium;
-      margin-top: 1rem;
+      margin-top: 0.5rem;
       border: none;
       border-bottom: 1px solid $primary-black-1;
     }
@@ -49,7 +49,7 @@
       width: 100%;
       height: 5rem;
       font-size: medium;
-      margin-top: 1rem;
+      margin-top: 0.5rem;
       resize: none;
       border-bottom: 1px solid $primary-black-1;
     }
@@ -61,6 +61,7 @@
     }
 
     p {
+      padding-top: 0.5rem;
       color: #bf1650;
     }
 
