--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -33,6 +33,13 @@
 
   .grid {
     width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .picture-grid {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,6 +49,7 @@
     animation: fadein 2s;
     width: 360px;
     height: 520px;
+    margin-bottom: 2rem;
   }
 
   .about-container {
@@ -82,9 +90,12 @@
     width: 24rem;
   }
 
+  .picture-grid {
+    // padding-bottom: 12rem;
+  }
+
   .grid {
     flex-direction: column;
-    padding-bottom: 1rem;
     height: 54rem;
     justify-content: space-evenly;
   }
