Update projecty pictures and experience desc

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,5 +1,10 @@
 @import "styles/variables.scss";
 
+.image {
+  background-color: 'white';
+  width: 500;
+}
+
 .footer {
   background-color: $primary-black-1;
   width: 100%;
