--- a/src/components/Header/Toolbar/index.scss
+++ b/src/components/Header/Toolbar/index.scss
@@ -59,7 +59,7 @@
 
     .toolbar__logo-projects {
       p {
-        color: $primary-pink-1;
+        color: $primary-marine-1;
         font-weight: $font-semibold;
       }
     }
@@ -93,7 +93,7 @@
 
       .projects {
         a:hover {
-          color: $primary-pink-1;
+          color: $primary-marine-1;
         }
       }
 
@@ -120,7 +120,7 @@
 
         .projects-link {
           p {
-            border-bottom: 2px solid $primary-pink-1;
+            border-bottom: 2px solid $primary-marine-1;
           }
         }
 
