--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,8 +15,8 @@ $primary-blue-1: #3f51b5;
 // orange
 $primary-orange-1: #ef7c00;
 
-// pink
-$primary-pink-1: #f0c5d5;
+// marine
+$primary-marine-1: #98C2C5;
 
 // grey
 $primary-grey-1: #e5e5e5;
