--- a/src/styles/pages/education.scss
+++ b/src/styles/pages/education.scss
@@ -7,12 +7,12 @@
   display: flex;
   flex-direction: column;
 
-  @keyframes fadein {
+  @keyframes slideleft {
     from {
-      opacity: 0;
+      width: 0;
     }
+
     to {
-      opacity: 1;
     }
   }
 
@@ -35,7 +35,11 @@
     .grid-container {
       width: 60%;
       margin-bottom: 1rem;
-      animation: fadein 2s;
+
+      .module-card-container {
+        animation: slideleft 2s forwards;
+        animation-fill-mode: both;
+      }
     }
   }
 }
