--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -7,6 +7,11 @@
   display: flex;
   flex-direction: column;
 
+  .about-main {
+    margin-top: 6rem;
+    overflow: hidden;
+  }
+
   .interest-grid {
     animation: fadein 2s;
     animation-delay: 1s;
